# skse-auto-heels

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: heel_update_manager.hpp  json.hpp  main.cpp  pch.h
